2008-12-19  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Fix send_last_published_item issue
	when running on clustered table (thanks to Vincent Barat)(EJAB-793)

2008-12-18  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Check option of the nodetree instead
	of checking configuration (thanks to Eric Cestari)(EJAB-737)

2008-12-16  Badlop  <badlop@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Fix update pubsub tables from
	ejabberd 1.x to 2.x (EJAB-817)

	* doc/guide.tex: Fix capitalization of some section titles

	* doc/guide.tex: Mention as optional Requirements: mysql, pgsql
	and pam

	* src/ejabberd_admin.erl: Command reopen-log must also rotate
	sasl.log (thanks to Alexander Tsvyashchenko)(EJAB-711)
	* src/ejabberd_logger_h.erl: Export the function rotate_log/1
	* doc/guide.tex: Improve explanation of log files rotation

	* doc/guide.tex: Improve explanation of watchdog admins
	option: only useful for developers (EJAB-816)
	* src/ejabberd.cfg.example: Likewise

	* doc/guide.tex: Say 'higher' instead of 'newer' in requirements
	* README: Likewise

	* doc/guide.tex: Simplify example mod_muc configuration

2008-12-15  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: fix get_item_name deadlock on
	transaction

2008-12-12  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberd_c2s.erl: Bugfix in "from" attribute checking

2008-12-09  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: prevent publish items with invalid
	XML schema bugfix (EJAB-699) (previous commit was uncomplete)
	and fix bug injected in previous commit

2008-12-08  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberd_c2s.erl: Reduce memory consumption due to caps handling
	* src/mod_pubsub/mod_pubsub.erl: Likewise
	* src/mod_caps.erl: Likewise
